# TermChroma

./: .gitignore  LICENSE  README.md  README_CN.md  README_TW.md  pyproject.toml
src/termchroma/: __init__.py  cli.py  core.py  models.py  tui.py
src/termchroma/themes/: dracula.json
tests/: test_termchroma.py
